--- a/ficha-dos-professores.html
+++ b/ficha-dos-professores.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="card sistemas">
                             SISTEMAS UTILIZADOS
-                            <span><a href="https://run.codes/offerings/view/863" target="_blank" class="text-nowrap">run.codes</a> Turma DK74</span>
+                            <span><a href="https://run.codes/offerings/view/863" target="_blank" class="text-nowrap">run.codes</a> (Turma DK74)</span>
                             <a href="https://ae4.tidia-ae.usp.br/portal/site/f70c4368-1333-4ab6-aeb7-bf6035bf3f71" target="_blank">Tidia</a>
                         </div>
                         <div class="card atendimento">
@@ -288,7 +288,7 @@
                             data-toggle="collapse" data-target="#francisco-data">
                         Francisco
                     </button>
-                    <div id="franciso-data" class="prof-data collapse">
+                    <div id="francisco-data" class="prof-data collapse">
                         <div class="card materia">
                             Física BCC-A
                         </div>
