--- a/ficha-dos-professores.html
+++ b/ficha-dos-professores.html
@@ -42,7 +42,6 @@
         	font-size: 12pt;
         	font-weight: bold;
         }
-        div.card.
     </style>
 </head>
 <body>
@@ -480,6 +479,19 @@
                 </div>
         	
         	-->
+
+        	<div class = "prof col-lg ">
+        	    <div style="display: flex; flex-direction: column;">
+		        <button class="btn btn-info btn-collapsed" type="button"
+                            data-toggle="collapse" data-target="#links">
+                        Links Úteis
+                        </button>        		
+                        <div id = "links" class="prof-data collapse">
+                            <a href="https://drive.google.com/open?id=1-Edxrw-_wahUobJGMTd41qJSAVzHivREWApYVkPZm64" target="_blank">Calendário Escolar</a>
+                            <a href="https://calendar.google.com/calendar/b/1?cid=dXNwLmJyX21hdnBscTJjZDAydjV2NmNhcmR2cWNncW4wQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20" target="_blank">Calendário de Provas</a>
+                        </div>	
+                    </div>
+        	</div>
         </div>
     </div>
 
