--- a/ficha-dos-professores.html
+++ b/ficha-dos-professores.html
@@ -487,7 +487,7 @@
                         Links Úteis
                         </button>        		
                         <div id = "links" class="prof-data collapse">
-                            <a href="https://drive.google.com/open?id=1-Edxrw-_wahUobJGMTd41qJSAVzHivREWApYVkPZm64" target="_blank">Calendário Escolar</a>
+                            <a href="https://drive.google.com/open?id=1-Edxrw-_wahUobJGMTd41qJSAVzHivREWApYVkPZm64" target="_blank">Calendário Escolar</a><br>
                             <a href="https://calendar.google.com/calendar/b/1?cid=dXNwLmJyX21hdnBscTJjZDAydjV2NmNhcmR2cWNncW4wQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20" target="_blank">Calendário de Provas</a>
                         </div>	
                     </div>
