--- a/ficha-dos-professores.html
+++ b/ficha-dos-professores.html
@@ -218,12 +218,13 @@
                         </div>
                         <div class="card provas">
                             <h3>PROVAS</h3>
-                            ??
+                            P1 - 25/09<br>
+                            P2 - 20/11
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
-                            <a href="" target="_blank">?</a>
-                            <a href="" target="_blank">?</a>
+                            <a href="https://ae4.tidia-ae.usp.br/portal/site/55a20603-3689-407c-83df-997010724da2/page/8be92043-71c0-4699-bd1c-c0e2315e08ad#" target="_blank">Tidia</a>
+                            <u>(Calendário de Aulas disponível na página principal do Tidia)</u>
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
@@ -238,7 +239,7 @@
                         </div>
                         <div class="card avaliacao">
                             <h3>CRITÉRIOS DE AVALIAÇÃO</h3>
-                            ??
+                            Média das duas provas
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
