--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -57,7 +57,7 @@
 
     
     <div class="container-fluid" style="margin-top: 10px;">
-        <div class = "yellowbox"> <h2>Ficha de Materias BCC-018</h2></div> 
+        <div class = "yellowbox"> <h2>Ficha de Matérias BCC-018</h2></div> 
         <div class="column">
             <div class="prof col-lg">
                 <div style="display: flex; flex-direction: column;">
