--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -46,6 +46,8 @@
             text-align: center;
             background-color: lightgoldenrodyellow;
             font-weight: bold;
+	    margin: .3em .0em;
+            border-radius: .9em;
         }
 
     </style>
