--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -170,7 +170,8 @@
                         </div>
                         <div class="card provas">
                             <h3>PROVAS</h3>
-                            P1 - 03/10<br>
+                            <h4>Turmas 1 e 2</h4> <br>
+			    P1 - 03/10<br>
 			    P2 - 28/11<br>		
                             NÃO ESQUEÇA DE LEVAR A IDENTIDADE!
                         </div>
