--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -170,7 +170,7 @@
                         </div>
                         <div class="card provas">
                             <h3>PROVAS</h3>
-                            <h5>Turmas 1 e 2</h5> <br>
+                            <b>Turmas 1 e 2</b><br>
 			    P1 - 03/10<br>
 			    P2 - 28/11<br>		
                             NÃO ESQUEÇA DE LEVAR A IDENTIDADE!
