--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -170,9 +170,9 @@
                         </div>
                         <div class="card provas">
                             <h3>PROVAS</h3>
-                            <b>Turmas 1 e 2</b><br>
+                            <p><b>Turmas 1 e 2</b><br>
 			    P1 - 03/10<br>
-			    P2 - 28/11<br>		
+			    P2 - 28/11<br></p>		
                             NÃO ESQUEÇA DE LEVAR A IDENTIDADE!
                         </div>
                         <div class="card sistemas">
