--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -127,7 +127,7 @@
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
-                            <a href="" target="_blank">Tidia</a>
+                            <a href="https://ae4.tidia-ae.usp.br/portal/site/4603a110-7a73-4715-b392-e938ff2b6bb8/page/fd5d84d3-e5a2-41b2-ad8e-8cd8d7849511" target="_blank">Tidia</a>
                         </div>
                         <div class="card atendimento">
                            <h3>MONITORIA/ATENDIMENTO</h3>
