--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -113,7 +113,7 @@
                 <div style="display: flex; flex-direction: column;">
                     <button class="btn btn-info btn-collapsed" type="button"
                             data-toggle="collapse" data-target="#robson-data">
-                        ALG-I
+                        ALG-I BCC-A
                     </button>
                     <div id="robson-data" class="prof-data collapse">
                         <div class="card professor">
@@ -158,6 +158,54 @@
                     </div>
                 </div>
             </div>
+		<div class="prof col-lg">
+                    <div style="display: flex; flex-direction: column;">
+                        <button class="btn btn-info btn-collapsed" type="button"
+                                data-toggle="collapse" data-target="#irene-data">
+                            ALG-I BCC-B
+                        </button>
+                        <div id="irene-data" class="prof-data collapse">
+                            <div class="card professor">
+                            Rudinei
+                        </div>
+                        <div class="card provas">
+                            <h3>PROVAS</h3>
+                            P1 - 01/10<br>
+			    P2 - 22/11<br>
+			    SUB - 03/12		
+                        </div>
+                        <div class="card sistemas">
+                            <h3>SISTEMAS UTILIZADOS</h3>
+                            <a href="http://ae4.tidia-ae.usp.br/" target="_blank">Tidia</a>
+                        </div>
+                        <div class="card atendimento">
+                            <h3>MONITORIA/ATENDIMENTO</h3>
+                            Atd. TER 17:00 -> 19:00 (Sala 4-229)<br>
+                            PAE Verificar no site da disciplina 
+
+                        </div>
+                        <div class="card email">
+                            <h3>CONTATO</h3>
+                            .usp.br		
+                        </div>
+                        <div class="card ementa">
+                            <a href="https://drive.google.com/file/d/17CGfI-BTB9yhJSMz7BXVGQAmODHwSvFn/view?usp=sharing" target="_blank">Bibliografia/Ementa</a>
+                        </div>
+                        <div class="card avaliacao">
+                            <h3>CRITÉRIOS DE AVALIAÇÃO</h3>
+                            <a href="blob:https://web.telegram.org/8ef7e64d-8232-4f71-8f8f-8e7779afa9b0" target="_blank">Aqui</a>
+                        </div>
+                        <div class="card listas">
+                            <h3>LISTAS</h3>
+                            Vazio
+                        </div>
+                        <div class="card arquivos">
+                            <h3>ARQUIVOS</h3>
+                            Vazio
+                        </div>
+                        </div>
+                    </div>
+                </div>
             <div class="prof col-lg">
                 <div style="display: flex; flex-direction: column;">
                     <button class="btn btn-info btn-collapsed" type="button"
@@ -442,6 +490,7 @@
                         </div>
                     </div>
                 </div>
+		
 
   		<!-- exemplo a ser copiado em edicoes posteriores
                 
