--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -193,7 +193,7 @@
                         </div>
                         <div class="card avaliacao">
                             <h3>CRITÉRIOS DE AVALIAÇÃO</h3>
-                            <a href="blob:https://web.telegram.org/8ef7e64d-8232-4f71-8f8f-8e7779afa9b0" target="_blank">Aqui</a>
+                            <a href="https://drive.google.com/file/d/1s-kMmMLdp_7cDmjwejwwIneRD_qclZuv/view?usp=sharing" target="_blank">Aqui</a>
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
