--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -176,7 +176,7 @@
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
-                            <a href="http://ae4.tidia-ae.usp.br/" target="_blank">Tidia</a>
+                            <a href="https://ae4.tidia-ae.usp.br/portal/site/bc385975-871c-4f52-9ebe-b69668e7fc71/page/e98f72ea-a6a5-46ff-9393-938613cde06d" target="_blank">Tidia</a>
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
@@ -186,7 +186,7 @@
                         </div>
                         <div class="card email">
                             <h3>CONTATO</h3>
-                            .usp.br		
+                             rudinei@icmc.usp.br		
                         </div>
                         <div class="card ementa">
                             <a href="https://drive.google.com/file/d/17CGfI-BTB9yhJSMz7BXVGQAmODHwSvFn/view?usp=sharing" target="_blank">Bibliografia/Ementa</a>
