Correção do id para os dados de Rudinei

--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -161,10 +161,10 @@
 		<div class="prof col-lg">
                     <div style="display: flex; flex-direction: column;">
                         <button class="btn btn-info btn-collapsed" type="button"
-                                data-toggle="collapse" data-target="#irene-data">
+                                data-toggle="collapse" data-target="#rudinei-data">
                             ALG-I BCC-B
                         </button>
-                        <div id="irene-data" class="prof-data collapse">
+                        <div id="rudinei-data" class="prof-data collapse">
                             <div class="card professor">
                             Rudinei
                         </div>
