--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -412,27 +412,35 @@
                         </div>
                         <div class="card provas">
                             <h3>PROVAS</h3>
-                            ??
+                            Projeto 1 - 23/10<br>
+			    Relatório aulas especiais - 13/11<br>		
+			    Projeto 2 - 04/12<br>
+			    REC - 12/12	
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
-                            <a href="" target="_blank">?</a>
+                            <a href="https://edisciplinas.usp.br/course/view.php?id=63998" target="_blank">Moodle</a>
                             <a href="" target="_blank">?</a>
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
-                            ??
+                            Mon. QUI 9:00 -> 11:00 (Sala 4-103)<br>
+			    Atd. - Marcar com o professor/monitor	
                         </div>
                         <div class="card email">
                             <h3>CONTATO</h3>
-                            spatti@icmc.usp.br		
+                            spatti@icmc.usp.br (Professor)<br>
+			    caosjr@usp.br (Monitor)			
                         </div>
                         <div class="card ementa">
-                            <a href="" target="_blank">Bibliografia/Ementa</a>
+                            <a href="https://edisciplinas.usp.br/pluginfile.php/4389102/mod_resource/content/0/Normas_SSC0108-1.pdf" target="_blank">Bibliografia/Ementa</a>
                         </div>
                         <div class="card avaliacao">
                             <h3>CRITÉRIOS DE AVALIAÇÃO</h3>
-                            ??
+                            𝑀𝐹 = 𝑁𝑅 ∗ 0,3 + 𝑁𝑃𝑅𝐽1 ∗ 0,35 + 𝑁𝑃𝑅𝐽2 ∗ 0,35 <br>
+			    𝑁𝑅: Nota do relatório das práticas <br>
+			    𝑁𝑃𝑅𝐽1: Nota do Projeto 1<br>
+			    𝑁𝑃𝑅𝐽2: Nota do Projeto 2
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
