--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -22,7 +22,7 @@
             background-color: lightseagreen;
             border-radius: .5em;
             font-weight: bold;
-        }
+        }    
         div.card {
             text-align: center;
             margin: .5em 0em;
@@ -400,7 +400,9 @@
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
-                            Vazio
+                            <a href="http://www.gradaluno.ifsc.usp.br/index.php?disc=7600105-1#" target="_blank">Lista 1</a>
+			    <a href="https://uspdigital.usp.br/jupiterweb/obterDisciplina?sgldis=fcm0200&nomdis=" target="_blank">Site da Discipolina</a>
+			     	
                         </div>
                     </div>
                 </div>
