--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -377,7 +377,7 @@
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
-                            <a href="http://www.gradaluno.ifsc.usp.br/index.php?disc=7600105-1" target="_blank">IFSC</a>
+                            <a href="http://www.gradaluno.ifsc.usp.br/index.php?disc=7600105-1" target="_blank">Site da Matéria</a>
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
@@ -396,7 +396,7 @@
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
-                            <a href="http://www.gradaluno.ifsc.usp.br/index.php?disc=7600105-1#" target="_blank">Lista 1</a>
+                            <a href="https://drive.google.com/file/d/1I8HKRiQB_Rpr1X2GPdl4s68REPkIjEu0/view?usp=sharing" target="_blank">Lista 1</a>
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
