--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -305,7 +305,7 @@
                     </div>
                 </div>
             </div>
-                        <div class="prof col-lg">
+             <div class="prof col-lg">
                 <div style="display: flex; flex-direction: column;">
                     <button class="btn btn-info btn-collapsed" type="button"
                             data-toggle="collapse" data-target="#danilo-data">
@@ -465,7 +465,12 @@
                         </div>
                         <div class="card provas">
                             <h3>PROVAS</h3>
-                            ??
+                            <p>BCC-A<br>
+				P1 - 05/10<br> 
+				P2 - 30/11</p>
+			    <p>BCC-B<br>
+				P1 - 05/10<br>
+				P2 - a decidir</p>    
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
