--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -470,22 +470,24 @@
 				P2 - 30/11</p>
 			    <p>BCC-B<br>
 				P1 - 05/10<br>
-				P2 - a decidir</p>    
+				P2 - ??</p>    
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
-                            <a href="" target="_blank">?</a>
-                            <a href="" target="_blank">?</a>
+                            <a href="http://conteudo.icmc.usp.br/pessoas/onnis/index_files/ensino.html" target="_blank">?</a>
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
-                            ??
+                            Atd. Combinar com a prof.(Sala 4-142)
+			    Mon. ??
                         </div>
                         <div class="card email">
                             <h3>CONTATO</h3>
-                            onnis@icmc.usp.br		
+                            onnis@icmc.usp.br<br>
+			    Ramal - 73-9722	
                         </div>
                         <div class="card ementa">
+			    Livro Recomendado - Sallas<br>
                             <a href="" target="_blank">Bibliografia/Ementa</a>
                         </div>
                         <div class="card avaliacao">
