--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -424,8 +424,7 @@
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
-                            <a href="" target="_blank">?</a>
-                            <a href="" target="_blank">?</a>
+                            <a href="http://www.gradaluno.ifsc.usp.br/index.php?disc=7600105-2" target="_blank">?</a>
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
@@ -436,7 +435,7 @@
                             faria@ifsc.usp.br
                         </div>
                         <div class="card ementa">
-                            <a href="" target="_blank">Bibliografia/Ementa</a>
+                            <a href="https://drive.google.com/file/d/1Inxe1CFs3B-7_REiO_ooJ9QcKqR3PtxQ/view?usp=sharing" target="_blank">Bibliografia/Ementa</a>
                         </div>
                         <div class="card avaliacao">
                             <h3>CRITÉRIOS DE AVALIAÇÃO</h3>
@@ -444,11 +443,11 @@
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
-                            Vazio
+                           <a href="https://drive.google.com/file/d/1VnkYg-3MeZVGVjOUKnNwqoGITtKBHN7t/view?usp=sharing" target="_blank">Site da Dsiciplina</a>
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
-                            Vazio
+                             <a href="http://www.gradaluno.ifsc.usp.br/index.php?disc=7600105-2#" target="_blank">Site da Dsiciplina</a>
                         </div>
                     </div>
                 </div>
