--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -443,7 +443,7 @@
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
-                           <a href="https://drive.google.com/file/d/1VnkYg-3MeZVGVjOUKnNwqoGITtKBHN7t/view?usp=sharing" target="_blank">Site da Dsiciplina</a>
+                           <a href="https://drive.google.com/file/d/1VnkYg-3MeZVGVjOUKnNwqoGITtKBHN7t/view?usp=sharing" target="_blank">Lista 1</a>
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
