--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -372,7 +372,8 @@
                             <h3>PROVAS</h3>
                             P1 - 31/08<br>		
 			    P2 - 16/10<br>	
-		            P3 - 30/11<br>		
+		            P3 - 30/11<br>
+			    Provinha - 14/08<br>		
 			    SUB - 07/12	
                         </div>
                         <div class="card sistemas">
@@ -419,7 +420,8 @@
                             <h3>PROVAS</h3>
 			    P1 - 31/08<br>		
 			    P2 - 16/10<br>	
-			    P3 - 30/11<br>		
+			    P3 - 30/11<br>
+			    Provinha - 14/08<br>
 			    SUB - 07/12		
                         </div>
                         <div class="card sistemas">
