--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -104,7 +104,7 @@
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
-                            Vazio
+                            <a href="https://ae4.tidia-ae.usp.br/portal/site/f70c4368-1333-4ab6-aeb7-bf6035bf3f71" target="_blank">Arquivos de Aula e outros</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,8 @@
                         </div>
                         <div class="card atendimento">
                            <h3>MONITORIA/ATENDIMENTO</h3>
-                           Atd. QUI 17h00 -> 19h00 (sala 3-245)
+                           ATEND. QUI 17h00 -> 19h00 (sala 3-245)<br>
+			   MONIT. TER 15:00->17:00 (sala 5-104) 	
                         </div>
                         <div class="card email">
                        	     <h3>CONTATO</h3>
@@ -153,7 +154,7 @@
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
-                            Vazio
+                            <a href="https://ae4.tidia-ae.usp.br/portal/site/4603a110-7a73-4715-b392-e938ff2b6bb8/page/8b19dcd4-5f1b-4111-9e56-01b7208086c8" target="_blank">Arquivos de aula e outros</a>
                         </div>
                     </div>
                 </div>
