--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -402,7 +402,7 @@
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
-                            <a href="https://uspdigital.usp.br/jupiterweb/obterDisciplina?sgldis=fcm0200&nomdis=" target="_blank">Site da Discipolina</a>
+                            <a href="https://uspdigital.usp.br/jupiterweb/obterDisciplina?sgldis=fcm0200&nomdis=" target="_blank">Site da Disciplina</a>
 			</div>
                     </div>
                 </div>
