--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -427,7 +427,7 @@
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
-                            <a href="http://www.gradaluno.ifsc.usp.br/index.php?disc=7600105-2" target="_blank">?</a>
+                            <a href="http://www.gradaluno.ifsc.usp.br/index.php?disc=7600105-2" target="_blank">Site da Disciplina</a>
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
