--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -450,7 +450,7 @@
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
-                             <a href="http://www.gradaluno.ifsc.usp.br/index.php?disc=7600105-2#" target="_blank">Site da Dsiciplina</a>
+                             <a href="http://www.gradaluno.ifsc.usp.br/index.php?disc=7600105-2#" target="_blank">Site da Disciplina</a>
                         </div>
                     </div>
                 </div>
