--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -476,7 +476,7 @@
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
-                            <a href="http://conteudo.icmc.usp.br/pessoas/onnis/index_files/ensino.html" target="_blank">?</a>
+                            <a href="http://conteudo.icmc.usp.br/pessoas/onnis/index_files/ensino.html" target="_blank">Site da Disciplina</a>
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
