--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -383,7 +383,7 @@
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
-                            ??
+				Mon. SEG 18:30->19:00 (sala 3001)
                         </div>
                         <div class="card email">
                             <h3>CONTATO</h3>
