--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -573,7 +573,7 @@
 
 			    
 			    <div class = "yellowbox">
-                            <a href="https://calendar.google.com/calendar/b/1?cid=dXNwLmJyX21hdnBscTJjZDAydjV2NmNhcmR2cWNncW4wQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20" target="_blank">Calendário de Provas (Só no PC)</a>
+                            <a href="https://calendar.google.com/calendar/b/1?cid=dXNwLmJyX21hdnBscTJjZDAydjV2NmNhcmR2cWNncW4wQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20" target="_blank">Calendário de Provas - Adicione à sua agenda Google (Só no PC)</a>
                     	    </div>
                         
                         </div>	
