--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -471,8 +471,8 @@
 				P1 - 05/10<br> 
 				P2 - 30/11</p>
 			    <p>BCC-B<br>
-				P1 - 05/10<br>
-				P2 - ??</p>    
+				P1 - 03/10<br>
+				P2 - 30/11</p>    
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
@@ -498,7 +498,8 @@
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
-                            Vazio
+			<a href="http://conteudo.icmc.usp.br/pessoas/onnis/SMA354T2_arquivos/lista1.pdf" target="_blank">Listas</a>
+                           
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
