--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -480,10 +480,17 @@
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
-                            Atd. Combinar com a prof.(Sala 4-142)
-			    Mon. ??
-                        </div>
-                        <div class="card email">
+                            Atd. Combinar com a prof.(Sala 4-142)<br>
+			    <p>Mon. Fernando<br> 
+				    TER 21:00-> 23:00<br>
+				    QUIN 19:00->21:00<br></p>
+			    <p>Mon. Turci <br>
+				    SEG 19:00->21:00<br>
+				    SEG das 21h->23h, 5-103</p>
+			    
+			</div>
+                        <div class=ocard email">TER 21:00-> 23:00 e QUIN 19:00->21:00<br>
+					       
                             <h3>CONTATO</h3>
                             onnis@icmc.usp.br<br>
 			    Ramal - 73-9722	
