--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -489,7 +489,7 @@
 				    SEG das 21h->23h, 5-103</p>
 			</div>
                         
-			<div class=ocard email"				       
+			<div class=ocard email">			       
                             <h3>CONTATO</h3>
                             onnis@icmc.usp.br<br>
 			    Ramal - 73-9722	
