--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -198,11 +198,12 @@
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
-                            Vazio
+                            <a href="https://drive.google.com/file/d/1Kg4ZcuvzoH7VQtS9Lz8Xh1VW_jELlvim/view?usp=sharing" target="_blank">Lista 1</a>
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
-                            Vazio
+				<a href="https://ae4.tidia-ae.usp.br/portal/site/bc385975-871c-4f52-9ebe-b69668e7fc71/page/906a38e0-2549-4d7a-b7d8-9a280d3d7fac" target="_blank">Aqui</a>
+                            
                         </div>
                         </div>
                     </div>
