--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -343,7 +343,7 @@
                         </div>
                         <div class="card avaliacao">
                             <h3>CRITÉRIOS DE AVALIAÇÃO</h3>
-                            𝑀𝐹 = 𝑁𝑅 ∗ 0,3 + 𝑁𝑃𝑅𝐽1 ∗ 0,35 + 𝑁𝑃𝑅𝐽2 ∗ 0,35 <br>
+                            MF = NR*0,3 + NPRJ ∗ 0,35 + NPRJ2 ∗ 0,35 <br>
 			    𝑁𝑅: Nota do relatório das práticas <br>
 			    𝑁𝑃𝑅𝐽1: Nota do Projeto 1<br>
 			    𝑁𝑃𝑅𝐽2: Nota do Projeto 2
