--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -344,9 +344,9 @@
                         <div class="card avaliacao">
                             <h3>CRITÉRIOS DE AVALIAÇÃO</h3>
                             MF = NR*0,3 + NPRJ ∗ 0,35 + NPRJ2 ∗ 0,35 <br>
-			    𝑁𝑅: Nota do relatório das práticas <br>
-			    𝑁𝑃𝑅𝐽1: Nota do Projeto 1<br>
-			    𝑁𝑃𝑅𝐽2: Nota do Projeto 2
+			    NR: Nota do relatório das práticas <br>
+			    NPRJ1: Nota do Projeto 1<br>
+			    NPRJ2: Nota do Projeto 2
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
