--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -485,7 +485,7 @@
 				    TER 21:00-> 23:00<br>
 				    QUIN 19:00->21:00<br></p>
 			    <p>Mon. Turci <br>
-				    SEG 19:00->21:00<br>
+				    SEG 19:00->21:00, 5-103<br>
 				    SEG das 21h->23h, 5-103</p>
 			</div>
                         
