--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -491,7 +491,8 @@
                         
 			<div class="card email">			       
                             <h3>CONTATO</h3>
-                            onnis@icmc.usp.br<br>
+                            Professora: onnis@icmc.usp.br<br>
+			    Monitor Turci: lucas.turci@usp.br<br>
 			    Ramal - 73-9722	
                         </div>
                         <div class="card ementa">
