--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -486,7 +486,7 @@
 				    QUIN 19:00->21:00<br></p>
 			    <p>Mon. Turci <br>
 				    SEG 19:00->21:00, 5-103<br>
-				    SEG das 21h->23h, 5-103</p>
+				    QUIN das 21h->23h, 5-103</p>
 			</div>
                         
 			<div class="card email">			       
