--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -251,7 +251,8 @@
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
-                            <a href="http://conteudo.icmc.usp.br/pessoas/eugenio/MatDisc/L1_matdisc.pdf" target="_blank">1° Lista</a>
+                            <a href="http://conteudo.icmc.usp.br/pessoas/eugenio/MatDisc/L1_matdisc.pdf" target="_blank">1° Lista - Lógica</a>
+				<a href="http://conteudo.icmc.usp.br/pessoas/eugenio/MatDisc/combinatoria.pdf">2° Lista - Combinatória</a>
                         </div>
                         <div class="card arquivos">
                             <h3>ARQUIVOS</h3>
@@ -482,10 +483,10 @@
                             <h3>MONITORIA/ATENDIMENTO</h3>
                             Atd. Combinar com a prof.(Sala 4-142)<br>
 			    <p>Mon. Fernando<br> 
-				    TER 21:00-> 23:00<br>
-				    QUIN 19:00->21:00<br></p>
+				    TER 21h->23h, C05 (prédio entre o bandeco e a saída da Mat)<br>
+				    QUIN 17h->19h, provavelmente na C05<br></p>
 			    <p>Mon. Turci <br>
-				    SEG 19:00->21:00, 5-103<br>
+				    SEG 19h->21h, 5-103<br>
 				    QUIN das 21h->23h, 5-103</p>
 			</div>
                         
@@ -505,7 +506,7 @@
                         </div>
                         <div class="card listas">
                             <h3>LISTAS</h3>
-			<a href="http://conteudo.icmc.usp.br/pessoas/onnis/SMA354T2_arquivos/lista1.pdf" target="_blank">Listas</a>
+			<a href="http://conteudo.icmc.usp.br/pessoas/onnis/SMA354T2_arquivos/lista1.pdf" target="_blank">1° Lista</a>
                            
                         </div>
                         <div class="card arquivos">
