--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -481,7 +481,7 @@
                         </div>
                         <div class="card atendimento">
                             <h3>MONITORIA/ATENDIMENTO</h3>
-                            Atd. Combinar com a prof.(Sala 4-142)<br>
+                            <p>Atd. Combinar com a prof.(Sala 4-142)<br></p>
 			    <p>Mon. Fernando<br> 
 				    TER 21h->23h, C05 (prédio entre o bandeco e a saída da Mat)<br>
 				    QUIN 17h->19h, provavelmente na C05<br></p>
