--- a/fichadematerias.html
+++ b/fichadematerias.html
@@ -76,6 +76,7 @@
                             P1 - 01/10<br>
                             P2 - 22/11<br>
                             <a href="https://run.codes/exercises/view/8771">T1 até 22/08</a>
+                            <a href="https://run.codes/exercises/view/8846">T2 até 07/09</a>
                         </div>
                         <div class="card sistemas">
                             <h3>SISTEMAS UTILIZADOS</h3>
